logs/rikiri.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/rikiri'...
Listing './lib/python3.5/site-packages/rikiri/contents'...
Listing './lib/python3.5/site-packages/rikiri/contents/css'...
Listing './lib/python3.5/site-packages/rikiri/contents/css/print'...
Listing './lib/python3.5/site-packages/rikiri/contents/css/theme'...
Listing './lib/python3.5/site-packages/rikiri/contents/css/theme/source'...
Listing './lib/python3.5/site-packages/rikiri/contents/css/theme/template'...
Listing './lib/python3.5/site-packages/rikiri/contents/js'...
Listing './lib/python3.5/site-packages/rikiri/contents/lib'...
Listing './lib/python3.5/site-packages/rikiri/contents/lib/css'...
Listing './lib/python3.5/site-packages/rikiri/contents/lib/font'...
Listing './lib/python3.5/site-packages/rikiri/contents/lib/font/league-gothic'...
Listing './lib/python3.5/site-packages/rikiri/contents/lib/font/source-sans-pro'...
Listing './lib/python3.5/site-packages/rikiri/contents/lib/js'...
Listing './lib/python3.5/site-packages/rikiri/contents/plugin'...
Listing './lib/python3.5/site-packages/rikiri/contents/plugin/highlight'...
Listing './lib/python3.5/site-packages/rikiri/contents/plugin/markdown'...
Listing './lib/python3.5/site-packages/rikiri/contents/plugin/math'...
Listing './lib/python3.5/site-packages/rikiri/contents/plugin/multiplex'...
Listing './lib/python3.5/site-packages/rikiri/contents/plugin/notes'...
Listing './lib/python3.5/site-packages/rikiri/contents/plugin/notes-server'...
Listing './lib/python3.5/site-packages/rikiri/contents/plugin/print-pdf'...
Listing './lib/python3.5/site-packages/rikiri/contents/plugin/search'...
Listing './lib/python3.5/site-packages/rikiri/contents/plugin/zoom-js'...
Listing './lib/python3.5/site-packages/rikiri/templates'...
Listing './lib/python3.5/site-packages/rikiri-0.6.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/yattag'...
Listing './lib/python3.5/site-packages/yattag-1.9.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
